methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:6: error: value Blue is not a member of object java.awt.Color
def faireV(){faireV(Color.YELLOW);gauche();faireV(Color.RED);gauche();faireV(Color.Blue);gauche();faireV(Color.GREEN);gauche()}
                                                                                   ^MethodsPicture:6: error: method faireV is defined twice
  conflicting symbols both originated in file 'plm.runtime7.MethodsPicture'
def faireV(){faireV(Color.YELLOW);gauche();faireV(Color.RED);gauche();faireV(Color.Blue);gauche();faireV(Color.GREEN);gauche()}
    ^