methods.picture.MethodsPicture.scala.code
override def run() {
def marquer(){baisseBrosse();leveBrosse()}
def faireV(c:Color){setCouleurBrosse(c)
  avance();avance();marquer();avance;gauche();avance();marquer();recule();droite();avance();marquer();avance();avance()}

def faireV(){faireV(Color.YELLOW);gauche();faireV(Color.RED);gauche();faireV(Color.Blue);gauche();faireV(Color.GREEN);gauche()}
for(x<-1 to 3){(for(y<-1 to 3){faireV();avance(7)})
               gauche();avance(7);droite()}
}